# InsightLoop

./: .gitignore  README.md  go.mod  main.go
Dashboard/public/: index.html
Dashboard/src/: App.css  App.js
rust-standup-ai/: .gitignore  Cargo.toml
rust-standup-ai/src/: lib.rs  main.rs  recording.rs  transcription.rs
sauron/: Cargo.toml
