[package]
name = "rust-standup-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = "0.30"
dotenv = "0.15"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
cpal = "0.15"
hound = "3.5"
