[package]
name = "rust-standup-ai"
version = "0.1.0"
edition = "2025"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = "0.30"
dotenv = "0.15"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }